<resources>

  <string name="app_name">MyTweet</string>
  <string name="text_hint">Enter Text Here..</string>
  <string name="status">Status</string>
  <string name="rented_checkbox_text">Rented?</string>
  <string name="new_tweet">New Tweet</string>
  <string name="settings">Settings</string>
  <string name="contact">Select Contact</string>
  <string name="tweet_report">Send Tweet Via e-mail</string>
  <string name="todaysDate">MONTH DAY YEAR TIME</string>
  <string name="max_length">max length</string>


  <string name="tweet_report_subject">Status Report on Tweet</string>
  
  <string name="tweet_button">Tweet</string>  
  
  <string name="delete_tweet">Delete Tweet</string>
  <string name="tweet_report_contact">This tweet is for %s</string>
  <string name="tweet_contact">%s</string>
  <string name="action_settings">Settings</string>
  
  <string name="clear">Clear</string>
  
  <string name="username">Usename</string>
  <string name="username_summary">What is your username?</string>
  
  <string name="password">Password</string>
  <string name="password_summary">What is your password?</string>
  
  <string name="refresh">Refresh Intervals</string>  
  <string name="refresh_summary">How frequently should data refresh?</string>  
  
  <string name="interval">textRefresh</string>  
</resources>
